dark mode ui fixes

--- a/src/output.css
+++ b/src/output.css
@@ -463,6 +463,8 @@ video {
 
 /* Individual selectable items, like dropdown options */
 
+/* Independent selectable items outside of a container, need visual separation from the background */
+
 .indie-selectable {
   cursor: pointer;
   border-radius: 0.375rem;
@@ -481,6 +483,8 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+
+/* Any submit button with a disabled state, styled to pop when enabled */
 
 .submit-button {
   border-radius: 0.375rem;
@@ -503,6 +507,8 @@ video {
 .submit-button:disabled {
   opacity: 0.4;
 }
+
+/* The exact width to accept an ethereum contract address */
 
 .address-input {
   height: 3rem;
@@ -926,6 +932,10 @@ video {
   height: 60svh;
 }
 
+.h-\[80svh\] {
+  height: 80svh;
+}
+
 .h-\[90svh\] {
   height: 90svh;
 }
@@ -941,10 +951,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[80svh\] {
-  height: 80svh;
 }
 
 .max-h-24 {
@@ -1588,6 +1594,18 @@ video {
   font-weight: 100;
 }
 
+.font-\[600\] {
+  font-weight: 600;
+}
+
+.font-black {
+  font-weight: 900;
+}
+
+.\!font-bold {
+  font-weight: 700 !important;
+}
+
 .leading-\[10rem\] {
   line-height: 10rem;
 }
@@ -1764,6 +1782,11 @@ video {
 .hover\:text-base-900:hover {
   --tw-text-opacity: 1;
   color: rgb(16 16 16 / var(--tw-text-opacity));
+}
+
+.hover\:text-base-50:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
